--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "lab -a code -l -L -n eslint",
     "test-cov-html": "lab -a code -l -L -n eslint -r html -o coverage.html",
-    "start": "nodemon server.js dev",
+    "dev": "nodemon server.js dev",
     "deploy:staging": "shipit staging deploy",
     "deploy:production": "shipit production deploy"
   },
@@ -44,10 +44,11 @@
     "dogwater": "^2.1.0",
     "get-env": "^0.4.0",
     "glue": "^3.4.0",
-    "hapi": "^14.2.0",
+    "hapi": "^16.1.0",
     "hapi-auth-bearer-token": "^4.2.1",
+    "hapi-plugin-websocket": "^0.9.5",
     "joi": "^9.0.4",
-    "labbable": "^1.1.0",
+    "labbable": "^2.1.0",
     "lodash": "^4.15.0",
     "sails-mysql": "^0.12.2",
     "waterline": "^0.12.2"
